Implement sort features by firstName